sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:6: error: '(' expected but identifier found.
    v=getValeur(i);if plusPetit(v,i-1){
                      ^AlgInsertionSort:9: error: illegal start of simple expression
  }
  ^